--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</i></p>
 
-<img src="images/nothing to hide (amendment%203).jpg" title="November 3, 2019 | AMENDMENT III: No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but in a manner to be prescribed by law.">
+<img src="images/nothing to hide (amendment 3).jpg" title="November 3, 2019 | AMENDMENT III: No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but in a manner to be prescribed by law.">
 <img src="images/fire%20(amendment%202).jpg" title="November 2, 2019 | AMENDMENT II: A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, shall not be infringed.">
 <img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment%201).jpg" title="November 1, 2019 | AMENDMENT I: Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.">
 
