--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@ img {
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</i></p>
 
+<img src="images/contain (amendment 10).jpg" title="November 10, 2019 | AMENDMENT X: The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.">
+<img src="images/in shadow (amendment 9).jpg" title="November 9, 2019 | AMENDMENT IX: The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.">
 <img src="images/usual suspects (amendment 8).jpg" title="November 8, 2019 | AMENDMENT VIII: Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual punishments inflicted.">
 <img src="images/americans dream (amendment 7).jpg" title="November 7, 2019 | AMENDMENT VII: In Suits at common law, where the value in controversy shall exceed twenty dollars, the right of trial by jury shall be preserved, and no fact tried by a jury, shall be otherwise reexamined in any Court of the United States, than according to the rules of the common law.">
 <img src="images/grasp (amendment 6).jpg" title="November 6, 2019 | AMENDMENT VI: In all criminal prosecutions, the accused shall enjoy the right to a speedy and public trial, by an impartial jury of the State and district wherein the crime shall have been committed, which district shall have been previously ascertained by law, and to be informed of the nature and cause of the accusation; to be confronted with the witnesses against him; to have compulsory process for obtaining witnesses in his favor, and to have the Assistance of Counsel for his defence.">
