--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -22,7 +22,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #fffcf2;
+	background-color: #fffdf7;
 }
 img {
 	width: 93%;
