--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/png" href="images/t favicon.png">
 </head>
 <TITLE>
-    Tom's Page
+    American Experiment
 </TITLE>
 <body>
 	</br>
