--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -41,7 +41,10 @@ img {
 }
 </style>
 
-<p style="font-size:14pt;font-family:garamond;color: #211400;text-align:center;"><i>––––    November 2019    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color: #211400;text-align:center;"><i>––––    Amendment I    ––––</i></p>
+
+<img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019 | AMENDMENT I: Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.">
+
 
 <img src="images/new hymn (amendment 27).jpg" title="November 27, 2019 | AMENDMENT XXVII: No law, varying the compensation for the services of the Senators and Representatives, shall take effect, until an election of representatives shall have intervened.">
 <img src="images/rite (amendment 26).jpg" title="November 26, 2019 | AMENDMENT XXVI: Section 1: The right of citizens of the United States, who are eighteen years of age or older, to vote shall not be denied or abridged by the United States or by any State on account of age. Section 2: The Congress shall have power to enforce this article by appropriate legislation.">
@@ -69,4 +72,3 @@ img {
 <img src="images/restrain (amendment 4).jpg" title="November 4, 2019 | AMENDMENT IV: The right of the people to be secure in their persons, houses, papers, and effects, against unreasonable searches and seizures, shall not be violated, and no Warrants shall issue, but upon probable cause, supported by Oath or affirmation, and particularly describing the place to be searched, and the persons or things to be seized.">
 <img src="images/nothing to hide (amendment 3).jpg" title="November 3, 2019 | AMENDMENT III: No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but in a manner to be prescribed by law.">
 <img src="images/fire%20(amendment 2).jpg" title="November 2, 2019 | AMENDMENT II: A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, shall not be infringed.">
-<img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019 | AMENDMENT I: Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.">
