--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -42,8 +42,10 @@ img {
 </style>
 
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>––––    Amendment I    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.</i></p>
 
-<img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019 | AMENDMENT I: Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.">
+
+<img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019">
 
 
 <img src="images/new hymn (amendment 27).jpg" title="November 27, 2019 | AMENDMENT XXVII: No law, varying the compensation for the services of the Senators and Representatives, shall take effect, until an election of representatives shall have intervened.">
