--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -41,11 +41,21 @@ img {
 }
 </style>
 
-<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>––––    Amendment I    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment I    ––––</b></i></p>
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.</i></p>
 
-
 <img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019">
+
+
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment II    ––––</b></i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, shall not be infringed.</i></p>
+
+<img src="images/fire%20(amendment 2).jpg" title="November 2, 2019">
+
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment III    ––––</b></i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but in a manner to be prescribed by law.</i></p>
+
+<img src="images/nothing to hide (amendment 3).jpg" title="November 3, 2019">
 
 
 <img src="images/new hymn (amendment 27).jpg" title="November 27, 2019 | AMENDMENT XXVII: No law, varying the compensation for the services of the Senators and Representatives, shall take effect, until an election of representatives shall have intervened.">
@@ -72,5 +82,3 @@ img {
 <img src="images/grasp (amendment 6).jpg" title="November 6, 2019 | AMENDMENT VI: In all criminal prosecutions, the accused shall enjoy the right to a speedy and public trial, by an impartial jury of the State and district wherein the crime shall have been committed, which district shall have been previously ascertained by law, and to be informed of the nature and cause of the accusation; to be confronted with the witnesses against him; to have compulsory process for obtaining witnesses in his favor, and to have the Assistance of Counsel for his defence.">
 <img src="images/disdain (amendment 5).jpg" title="November 5, 2019 | AMENDMENT V: No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of War or public danger; nor shall any person be subject for the same offence to be twice put in jeopardy of life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, liberty, or property, without due process of law; nor shall private property be taken for public use, without just compensation.">
 <img src="images/restrain (amendment 4).jpg" title="November 4, 2019 | AMENDMENT IV: The right of the people to be secure in their persons, houses, papers, and effects, against unreasonable searches and seizures, shall not be violated, and no Warrants shall issue, but upon probable cause, supported by Oath or affirmation, and particularly describing the place to be searched, and the persons or things to be seized.">
-<img src="images/nothing to hide (amendment 3).jpg" title="November 3, 2019 | AMENDMENT III: No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but in a manner to be prescribed by law.">
-<img src="images/fire%20(amendment 2).jpg" title="November 2, 2019 | AMENDMENT II: A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, shall not be infringed.">
