--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -57,6 +57,20 @@ img {
 
 <img src="images/nothing to hide (amendment 3).jpg" title="November 3, 2019">
 
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment IV    ––––</b></i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>The right of the people to be secure in their persons, houses, papers, and effects, against unreasonable searches and seizures, shall not be violated, and no Warrants shall issue, but upon probable cause, supported by Oath or affirmation, and particularly describing the place to be searched, and the persons or things to be seized."</i></p>
+
+<img src="images/restrain (amendment 4).jpg" title="November 4, 2019">
+
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment V    ––––</b></i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of War or public danger; nor shall any person be subject for the same offence to be twice put in jeopardy of life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, liberty, or property, without due process of law; nor shall private property be taken for public use, without just compensation."</i></p>
+
+<img src="images/disdain (amendment 5).jpg" title="November 5, 2019">
+
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment VI    ––––</b></i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of War or public danger; nor shall any person be subject for the same offence to be twice put in jeopardy of life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, liberty, or property, without due process of law; nor shall private property be taken for public use, without just compensation."</i></p>
+
+
 
 <img src="images/new hymn (amendment 27).jpg" title="November 27, 2019 | AMENDMENT XXVII: No law, varying the compensation for the services of the Senators and Representatives, shall take effect, until an election of representatives shall have intervened.">
 <img src="images/rite (amendment 26).jpg" title="November 26, 2019 | AMENDMENT XXVI: Section 1: The right of citizens of the United States, who are eighteen years of age or older, to vote shall not be denied or abridged by the United States or by any State on account of age. Section 2: The Congress shall have power to enforce this article by appropriate legislation.">
@@ -80,5 +94,3 @@ img {
 <img src="images/usual suspects (amendment 8).jpg" title="November 8, 2019 | AMENDMENT VIII: Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual punishments inflicted.">
 <img src="images/americans dream (amendment 7).jpg" title="November 7, 2019 | AMENDMENT VII: In Suits at common law, where the value in controversy shall exceed twenty dollars, the right of trial by jury shall be preserved, and no fact tried by a jury, shall be otherwise reexamined in any Court of the United States, than according to the rules of the common law.">
 <img src="images/grasp (amendment 6).jpg" title="November 6, 2019 | AMENDMENT VI: In all criminal prosecutions, the accused shall enjoy the right to a speedy and public trial, by an impartial jury of the State and district wherein the crime shall have been committed, which district shall have been previously ascertained by law, and to be informed of the nature and cause of the accusation; to be confronted with the witnesses against him; to have compulsory process for obtaining witnesses in his favor, and to have the Assistance of Counsel for his defence.">
-<img src="images/disdain (amendment 5).jpg" title="November 5, 2019 | AMENDMENT V: No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of War or public danger; nor shall any person be subject for the same offence to be twice put in jeopardy of life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, liberty, or property, without due process of law; nor shall private property be taken for public use, without just compensation.">
-<img src="images/restrain (amendment 4).jpg" title="November 4, 2019 | AMENDMENT IV: The right of the people to be secure in their persons, houses, papers, and effects, against unreasonable searches and seizures, shall not be violated, and no Warrants shall issue, but upon probable cause, supported by Oath or affirmation, and particularly describing the place to be searched, and the persons or things to be seized.">
