--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -70,6 +70,12 @@ img {
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment VI    ––––</b></i></p>
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of War or public danger; nor shall any person be subject for the same offence to be twice put in jeopardy of life or limb; nor shall be compelled in any criminal case to be a witness against himself, nor be deprived of life, liberty, or property, without due process of law; nor shall private property be taken for public use, without just compensation."</i></p>
 
+<img src="images/grasp (amendment 6).jpg" title="November 6, 2019">
+
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment VII    ––––</b></i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>In Suits at common law, where the value in controversy shall exceed twenty dollars, the right of trial by jury shall be preserved, and no fact tried by a jury, shall be otherwise reexamined in any Court of the United States, than according to the rules of the common law."</i></p>
+
+<img src="images/americans dream (amendment 7).jpg" title="November 7, 2019">
 
 
 <img src="images/new hymn (amendment 27).jpg" title="November 27, 2019 | AMENDMENT XXVII: No law, varying the compensation for the services of the Senators and Representatives, shall take effect, until an election of representatives shall have intervened.">
@@ -92,5 +98,3 @@ img {
 <img src="images/contain (amendment 10).jpg" title="November 10, 2019 | AMENDMENT X: The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.">
 <img src="images/in shadow (amendment 9).jpg" title="November 9, 2019 | AMENDMENT IX: The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.">
 <img src="images/usual suspects (amendment 8).jpg" title="November 8, 2019 | AMENDMENT VIII: Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual punishments inflicted.">
-<img src="images/americans dream (amendment 7).jpg" title="November 7, 2019 | AMENDMENT VII: In Suits at common law, where the value in controversy shall exceed twenty dollars, the right of trial by jury shall be preserved, and no fact tried by a jury, shall be otherwise reexamined in any Court of the United States, than according to the rules of the common law.">
-<img src="images/grasp (amendment 6).jpg" title="November 6, 2019 | AMENDMENT VI: In all criminal prosecutions, the accused shall enjoy the right to a speedy and public trial, by an impartial jury of the State and district wherein the crime shall have been committed, which district shall have been previously ascertained by law, and to be informed of the nature and cause of the accusation; to be confronted with the witnesses against him; to have compulsory process for obtaining witnesses in his favor, and to have the Assistance of Counsel for his defence.">
