--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -9,7 +9,7 @@
 <body>
 	</br>
 	
-<img src="images/tomspage.png" class="logo">
+<img src="images/ae logo scaled.png" class="logo">
 </body>
 
 </html>
@@ -33,7 +33,7 @@ img {
 	display: block;
  	margin-left: auto;
   	margin-right: auto;
-     	width: 37%;
+     	width: 90%;
 	height: auto;
 	margin-bottom: 35px;
 	box-shadow: none;
