--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -8,9 +8,13 @@
 </TITLE>
 <body>
 	</br>
+	</br>
 	
 <img src="images/ae logo scaled.png" class="logo">
 </body>
+
+</br>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i><a href="https://www.tomspage.org">Back to Tom's Page</a></i></p>
 
 </html>
 </br>
@@ -24,7 +28,7 @@ body {
 	background-color: #fffdf7;
 }
 img {
-	width: 93%;
+	width: 100%;
 	height: auto;
 	margin-bottom: 32px;
 	box-shadow: 0px 2px 5px 0px #696969;
