--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -257,7 +257,7 @@ img {
 
 <img src="images/new hymn (amendment 27).jpg" title="November 27, 2019">
 
-<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––––</b></i></p>
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    The American Experiment    ––––</b></i></p>
 
 	</br>
 	</br>
