--- a/index.html
+++ b/index.html
@@ -46,10 +46,7 @@ img {
 }
 </style>
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</i></p>
-<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i><a href="https://www.tomspage.org/americanexperiment">American Experiment:
-	</br>
-	The Amendments to the Consitution</a></i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</p></br><p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i><a href="https://www.tomspage.org/americanexperiment">American Experiment:</br>The Amendments to the Consitution</a></i></p>
 
 <img src="images/new hymn (amendment 27).jpg" title="November 27, 2019 | AMENDMENT XXVII: No law, varying the compensation for the services of the Senators and Representatives, shall take effect, until an election of representatives shall have intervened.">
 <img src="images/rite (amendment 26).jpg" title="November 26, 2019 | AMENDMENT XXVI: Section 1: The right of citizens of the United States, who are eighteen years of age or older, to vote shall not be denied or abridged by the United States or by any State on account of age. Section 2: The Congress shall have power to enforce this article by appropriate legislation.">
