--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ img {
 }
 </style>
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    <a href="https://www.tomspage.org/americanexperiment">American Experiment:</a>    ––––</i></p>
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>The Amendments to the Constitution</i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</i></p>
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i><a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></i></p>
 
 
 <img src="images/new hymn (amendment 27).jpg" title="November 27, 2019 | AMENDMENT XXVII: No law, varying the compensation for the services of the Senators and Representatives, shall take effect, until an election of representatives shall have intervened.">
