--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ img {
 }
 </style>
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––
+<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</br>
 <a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></i></p>
 
 
