--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</br>
 	
 <img src="images/tomspage.png" class="logo">
-<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the daily mailing list:</i></p>
+<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
 </body>
 
 <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
@@ -45,6 +45,8 @@ img {
 	box-shadow: none;
 }
 </style>
+
+<a href="https://youtu.be/NUnXxh5U25Y?t=201" target="_blank"><img src="images/falling 12.21.19.jpg" title="December 21, 2019"></a>
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</br>
 <a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></i></p>
