--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -42,6 +42,15 @@ img {
 	margin-bottom: 35px;
 	box-shadow: none;
 }
+	.truman {
+	display: block;
+ 	margin-left: auto;
+  	margin-right: auto;
+     	width: 40%;
+	height: auto;
+	margin-bottom: 35px;
+	box-shadow: none;
+}
 </style>
 
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment I    ––––</b></i></p>
@@ -263,6 +272,9 @@ img {
 
 </br>
 <h1 style="font-family:garamond;color: #362000;text-align:right;"><i>by Tom</i></h1>
+</br>
+</br>
+<img src="images/truman shows.jpg" class="truman">
 </br>
 </br>
 <p style="font-family:Trebuchet MS;color:gray"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
