--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -46,7 +46,7 @@ img {
 	display: block;
  	margin-left: auto;
   	margin-right: auto;
-     	width: 40%;
+     	width: 70%;
 	height: auto;
 	margin-bottom: 35px;
 	box-shadow: none;
@@ -274,7 +274,6 @@ img {
 <h1 style="font-family:garamond;color: #362000;text-align:right;"><i>by Tom</i></h1>
 </br>
 </br>
-<img src="images/truman shows.jpg" class="truman">
-</br>
+<img src="images/truman shows 2.jpg" class="truman">
 </br>
 <p style="font-family:Trebuchet MS;color:gray"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
