--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -49,7 +49,7 @@ img {
      	width: 70%;
 	height: auto;
 	margin-bottom: 35px;
-	box-shadow: none;
+	box-shadow: 0px 2px 5px 0px #696969;
 }
 </style>
 
