--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ img {
 }
 </style>
 
+<img src="images/Qn 12.28.19.jpg" title="December 28, 2019">
 <a href="https://youtu.be/NUnXxh5U25Y?t=201" target="_blank"><img src="images/falling 12.21.19.jpg" title="December 21, 2019"></a>
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</br>
