--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ img {
 }
 </style>
 
+<a href="https://www.tomspage.org/images/blackstars.jpg" target="_blank"><img src="images/blackstars 2020.jpg" title="January 11, 2020"></a>
 <img src="images/wild%2C or%2C portrait of the artist 1.4.20%2C or%2C high in the custerdome.jpg" title="January 4, 2020">
 <img src="images/Qn 12.28.19.jpg" title="December 28, 2019">
 <a href="https://youtu.be/NUnXxh5U25Y?t=201" target="_blank"><img src="images/falling 12.21.19.jpg" title="December 21, 2019"></a>
