--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ img {
 }
 </style>
 
+<img src="images/iii guesses.jpg" title="January 26, 2020">
 <img src="images/in flight.jpg" title="January 19, 2020">
 <a href="https://www.tomspage.org/images/blackstars.jpg" target="_blank"><img src="images/blackstars 2020.jpg" title="January 11, 2020"></a>
 <img src="images/wild%2C or%2C portrait of the artist 1.4.20%2C or%2C high in the custerdome.jpg" title="January 4, 2020">
