--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ img {
 }
 </style>
 
+<a href="https://en.wikipedia.org/wiki/Stars_(M._C._Escher)" target="_blank"><img src="images/etsch.jpg" title="February 9, 2020"></a>
 <img src="images/pennsylvania polka.jpg" title="February 2, 2020">
 <img src="images/iii guesses.jpg" title="January 26, 2020">
 <img src="images/in flight.jpg" title="January 19, 2020">
