--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ img {
 }
 </style>
 
+<img src="images/until my protector comes (portrait of the artist 3.16.20).jpg" title="March 16, 2020">
 <img src="images/hot tip 19.jpg" title="March 8, 2020">
 <img src="images/next thing on my checklist.jpg" title="February 23, 2020">
 <a href="https://www.youtube.com/watch?v=Qr5YPpOV94M" target="_blank"><img src="images/portrait of the artist 2.16.20.jpg" title="February 16, 2020"></a>
