--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@ img {
 }
 </style>
 
+<a href="https://www.youtube.com/watch?v=jHNqs3IYvG0" target="_blank"><img src="images/on being alone.jpg" title="April 22, 2020"></a>
+<img src="images/4.5.20.jpg" title="April 5, 2020">
+<img src="images/remember how to do this.jpg" title="April 4, 2020">
 <img src="images/rain song (midst of deliverance iii).jpg" title="April 3, 2020">
 <img src="images/midst of deliverance ii.jpg" title="March 23, 2020">
 <img src="images/until my protector comes (portrait of the artist 3.16.20).jpg" title="March 16, 2020">
