--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@ img {
 }
 </style>
 
+<img src="images/in flight 7.12.20.jpg" title="July 12, 2020">
+<img src="images/on sisyphus (midst of deliverance iv).jpg" title="May 31, 2020">
 <img src="images/try 2 hang on.jpg" title="May 23, 2020">
 <a href="https://www.youtube.com/watch?v=jHNqs3IYvG0" target="_blank"><img src="images/on being alone.jpg" title="April 22, 2020"></a>
 <img src="images/4.5.20.jpg" title="April 5, 2020">
