--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ img {
 }
 </style>
 
+<img src="images/rain song ii.jpg" title="August 2, 2020">
 <img src="images/still life 7.18.20.jpg" title="July 18, 2020">
 <img src="images/in flight 7.12.20.jpg" title="July 12, 2020">
 <img src="images/on sisyphus (midst of deliverance iv).jpg" title="May 31, 2020">
