--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ img {
 }
 </style>
 
+<img src="images/rain song iii.jpg" title="September 27, 2020">
 <img src="images/in the desert ii.jpg" title="August 25, 2020">
 <img src="images/viewing 8.9.20.jpg" title="August 9, 2020">
 <img src="images/rain song ii.jpg" title="August 2, 2020">
