--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ img {
 }
 </style>
 
+<img src="images/camelot.jpg" title="November 25, 2020">
 <img src="images/on being alone 3ish, or, portrait of the artist 10.18.20.jpg" title="October 18, 2020">
 <img src="images/10.03.20, or, variation on a theme.jpg" title="October 4, 2020">
 <img src="images/rain song iii.jpg" title="September 27, 2020">
