--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -54,28 +54,28 @@ img {
 </style>
 
 <p style="font-size:16pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment I    ––––</b></i></p>
-<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>portait of the artist's countrymen.jpg</i></p>
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.</i></p>
 
 <img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019">
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;">"portait of the artist's countrymen.jpg"</p>
 
 	</br>
 	</br>
 
 <p style="font-size:16pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment II    ––––</b></i></p>
-<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>fire.jpg</i></p>
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, shall not be infringed.</i></p>
 
 <img src="images/fire%20(amendment 2).jpg" title="November 2, 2019">
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;">"fire.jpg"</p>
 	
 	</br>
 	</br>
 
 <p style="font-size:16pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment III    ––––</b></i></p>
-<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>nothing to hide.jpg</i></p>
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but in a manner to be prescribed by law.</i></p>
 
 <img src="images/nothing to hide (amendment 3).jpg" title="November 3, 2019">
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;">"nothing to hide.jpg"</p>
 
 	</br>
 	</br>
