--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -26,7 +26,7 @@ body {
 	width: 600px;
 	margin: auto;
 	background-color: #fffdf7;
-  	line-height: 0.7;
+  	line-height: 1.7;
 }
 img {
 	width: 100%;
@@ -55,10 +55,11 @@ img {
 </style>
 
 <p style="font-size:16pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment I    ––––</b></i></p>
+<p style="font-size:14pt;font-family:Trebuchet MS;color: #2b2b2b;text-align:center;">"portait of the artist's countrymen.jpg"</p>
+	</br>
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i>Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.</i></p>
 
 <img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019">
-<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;">"portait of the artist's countrymen.jpg"</p>
 
 	</br>
 	</br>
