--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -2,10 +2,73 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="images/t favicon.png">
-</head>
+	
+<style>
+	
 <TITLE>
     American Experiment
 </TITLE>
+	
+	
+body {
+	text-align: center;
+	width: 600px;
+	margin: auto;
+	background-color: #fffdf7;
+  	line-height: 1.1;
+}
+.amendment {
+	font-size: 16pt;
+	font-family: garamond;
+	font-style: italic;
+	color: #362000;
+	text-align: center;
+	margin-top: 0;
+	}
+.title {
+	font-size: 11pt;
+	font-family:Trebuchet MS;
+	color: #707070;
+	text-align: center;
+	margin-top: 0;
+	
+.text {
+	font-size: 14pt;
+	font-family: garamond;
+	font-style: italic;
+	color: #362000;
+	text-align: center;
+	margin-top: 0;
+	}
+	
+img {
+	width: 100%;
+	height: auto;
+	margin-bottom: 32px;
+	box-shadow: 0px 2px 5px 0px #696969;
+}
+.logo {
+	display: block;
+ 	margin-left: auto;
+  	margin-right: auto;
+     	width: 90%;
+	height: auto;
+	margin-bottom: 35px;
+	box-shadow: none;
+}
+.truman {
+	display: block;
+ 	margin-left: auto;
+  	margin-right: auto;
+     	width: 70%;
+	height: auto;
+	margin-bottom: 35px;
+	box-shadow: 0px 2px 5px 0px #696969;
+}
+</style>	
+		
+</head>
+
 <body>
 	</br>
 	</br>
@@ -20,39 +83,17 @@
 </br>
 </br>
 </br>
-<style>
-body {
-	text-align: center;
-	width: 600px;
-	margin: auto;
-	background-color: #fffdf7;
-  	line-height: 1.1;
-}
-img {
-	width: 100%;
-	height: auto;
-	margin-bottom: 32px;
-	box-shadow: 0px 2px 5px 0px #696969;
-}
-	.logo {
-	display: block;
- 	margin-left: auto;
-  	margin-right: auto;
-     	width: 90%;
-	height: auto;
-	margin-bottom: 35px;
-	box-shadow: none;
-}
-	.truman {
-	display: block;
- 	margin-left: auto;
-  	margin-right: auto;
-     	width: 70%;
-	height: auto;
-	margin-bottom: 35px;
-	box-shadow: 0px 2px 5px 0px #696969;
-}
-</style>
+
+
+
+<p class="amendment">———— To be fair, —————</p>
+<p class="title">you have to have a</p>
+<p class="text">very high IQ to understand rick and morty. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer's head.</p>
+
+<img src="https://cdn.vox-cdn.com/thumbor/dHm90p5yFjsq_kwoULDIL0JR0v0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/9432879/r_m_sauce.jpg">
+
+
+
 
 <p style="font-size:16pt;font-family:garamond;color: #362000;text-align:center;"><b><i>––––    Amendment I    ––––</b></i></p>
 <p style="font-size:12pt;font-family:Trebuchet MS;color: #2b2b2b;text-align:center;">"portait of the artist's countrymen.jpg"</p>
