--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -21,6 +21,7 @@ body {
 	font-size: 16pt;
 	font-family: garamond;
 	font-style: italic;
+	font-style: bold;
 	color: #362000;
 	text-align: center;
 	margin-top: 0;
@@ -32,7 +33,7 @@ body {
 	text-align: center;
 	margin-top: 0;
 	
-.text {
+.body {
 	font-size: 14pt;
 	font-family: garamond;
 	font-style: italic;
@@ -88,7 +89,7 @@ img {
 
 <p class="amendment">———— To be fair, —————</p>
 <p class="title">you have to have a</p>
-<p class="text">very high IQ to understand rick and morty. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer's head.</p>
+<p class="body">very high IQ to understand rick and morty. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer's head.</p>
 
 <img src="https://cdn.vox-cdn.com/thumbor/dHm90p5yFjsq_kwoULDIL0JR0v0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/9432879/r_m_sauce.jpg">
 
