--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -83,7 +83,7 @@ img {
 
 
 
-<p class="amendment">–––– To be fair, —————</p>
+<p class="amendment">–––– To be fair, ––––</p>
 <p class="title">you have to have a</p>
 <p class="body">very high IQ to understand rick and morty. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer's head.</p>
 
