--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -3,9 +3,7 @@
 <head>
 <link rel="icon" type="image/png" href="images/t favicon.png">
 	
-<style>
-		
-	
+<style>			
 body {
 	text-align: center;
 	width: 600px;
@@ -60,8 +58,10 @@ img {
 	height: auto;
 	margin-bottom: 35px;
 	box-shadow: 0px 2px 5px 0px #696969;
-}
+}	
 </style>	
+	
+<meta content="width=device-width, initial-scale=1" name="viewport">
 		
 </head>
 
