--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -14,7 +14,7 @@ body {
 .amendment {
 	font-size: 16pt;
 	font-family: garamond;
-	font-style: bold;
+	font-weight: 400;
 	font-style: italic;
 	color: #362000;
 	text-align: center;
