--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -21,7 +21,7 @@ body {
 	margin-top: 0;
 }
 .title {
-	font-size: 11pt;
+	font-size: 12pt;
 	font-family:Trebuchet MS;
 	color: #707070;
 	text-align: center;
@@ -82,8 +82,8 @@ img {
 
 
 
-<p class="amendment">–––– To be fair, ––––</p>
-<p class="title">you have to have a</p>
+<p class="amendment">–––– To be fair––––</p>
+<p class="title">"you have to have a.jpg"</p>
 <p class="body">very high IQ to understand rick and morty. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer's head.</p>
 
 <img width: 600px; src="https://cdn.vox-cdn.com/thumbor/dHm90p5yFjsq_kwoULDIL0JR0v0=/1400x1400/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/9432879/r_m_sauce.jpg">
