--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -19,6 +19,7 @@ body {
 	color: #362000;
 	text-align: center;
 	margin-top: 0;
+	margin-bottom: 0;
 }
 .title {
 	font-size: 12pt;
@@ -26,6 +27,7 @@ body {
 	color: #707070;
 	text-align: center;
 	margin-top: 0;
+	margin-bottom: 0;
 }
 .body {
 	font-size: 14pt;
@@ -82,7 +84,7 @@ img {
 
 
 
-<p class="amendment">–––– To be fair––––</p>
+<p class="amendment">––––To be fair––––</p>
 <p class="title">"you have to have a.jpg"</p>
 <p class="body">very high IQ to understand rick and morty. The humor is extremely subtle, and without a solid grasp of theoretical physics most of the jokes will go over a typical viewer's head.</p>
 
