--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -18,7 +18,7 @@ body {
 	font-style: italic;
 	color: #362000;
 	text-align: center;
-	margin-top: 0;
+	margin-top: 20px;
 	margin-bottom: 6px;
 }
 .title {
@@ -27,7 +27,7 @@ body {
 	color: #707070;
 	text-align: center;
 	margin-top: 0;
-	margin-bottom: 40px;
+	margin-bottom: 20px;
 }
 .body {
 	font-size: 14pt;
