--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -26,7 +26,7 @@ body {
 	font-family:Trebuchet MS;
 	color: #707070;
 	text-align: center;
-	margin-top: 0;
+	margin-top: 15px;
 	margin-bottom: 20px;
 }
 .body {
