--- a/hottip/index.html
+++ b/hottip/index.html
@@ -2,25 +2,7 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="images/t favicon.png">
-</head>
-<TITLE>
-    Tom's Page
-</TITLE>
-<body>
-	</br>
-	
-<img src="images/tomspage.png" class="logo">
-<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
-</body>
 
-<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
-</form>
-</html>
-</br>
-</br>
-</br>
 <style>
 body {
 	text-align: center;
@@ -44,6 +26,21 @@ img {
 	margin-bottom: 35px;
 	box-shadow: none;
 }
-</style>
+</style>	
+</head>
 
-<img src="images/rain song iv.jpg" title="December 28, 2020">
+<body>
+<img src="images/tomspage.png" class="logo">
+	
+	<br>
+	<br>
+	<br>
+	
+<p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i><a href="https://www.tomspage.org">Back to Tom's Page</a></i></p>
+
+<img src="images/hot tip 1.jpg" title="December 28, 2020">
+	
+	
+	
+</body>
+</html
