--- a/hottip/index.html
+++ b/hottip/index.html
@@ -32,13 +32,24 @@ img {
 <body>
 <img src="images/tomspage.png" class="logo">
 	
-	<br>
+<TITLE>
+    Hot Tip!
+</TITLE>
+	
 	<br>
 	<br>
 	
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i><a href="https://www.tomspage.org">Back to Tom's Page</a></i></p>
 
-<img src="images/hot tip 1.jpg" title="December 28, 2020">
+
+<img src="images/hot tip 1.jpg" title="February 15, 2019">
+	
+<img src="images/hot tip 2.jpg" title="February 16, 2019">
+	
+<img src="images/hot tip 3.jpg" title="February 25, 2019">
+
+<img src="images/hot tip 4.jpg" title="March 12, 2019">
+
 	
 	
 	
