--- a/hottip/index.html
+++ b/hottip/index.html
@@ -15,9 +15,14 @@ img {
 	height: auto;
 	margin-bottom: 32px;
 	box-shadow: 0px 2px 5px 0px #696969;
-
 }
-	.logo {
+.title {
+	font-size: 14pt;
+	font-family:garamond;
+	color: #707070;
+	text-align: center;
+}
+.logo {
 	display: block;
  	margin-left: auto;
   	margin-right: auto;
@@ -30,7 +35,7 @@ img {
 </head>
 
 <body>
-<img src="images/tomspage.png" class="logo">
+<img src="images/tomspage hot.png" class="logo">
 	
 <TITLE>
     Hot Tip!
@@ -41,17 +46,28 @@ img {
 	
 <p style="font-size:14pt;font-family:garamond;color: #362000;text-align:center;"><i><a href="https://www.tomspage.org">Back to Tom's Page</a></i></p>
 
-
+<p class="title">#1</p>
 <img src="images/hot tip 1.jpg" title="February 15, 2019">
+
+	<br>
 	
+<p class="title">#2</p>
 <img src="images/hot tip 2.jpg" title="February 16, 2019">
-	
+
+	<br>
+
+<p class="title">#3</p>
 <img src="images/hot tip 3.jpg" title="February 25, 2019">
 
-<img src="images/hot tip 4.jpg" title="March 12, 2019">
+	<br>
 
-	
-	
+<p class="title">#4</p>
+<img src="images/hot tip 4.jpg" title="March 5, 2019">
+
+	<br>
+
+<p class="title">#5</p>
+<img src="images/hot tip 5.jpg" title="March 12, 2019">	
 	
 </body>
 </html
