--- a/hottip/index.html
+++ b/hottip/index.html
@@ -8,7 +8,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #f4f7fc;
+	background-color: #181540;
 }
 img {
 	width: 93%;
