--- a/hottip/index.html
+++ b/hottip/index.html
@@ -18,9 +18,10 @@ img {
 }
 .title {
 	font-size: 14pt;
-	font-family:garamond;
-	color: #707070;
+	font-family: garamond;
+	color: #73e3ff;
 	text-align: center;
+	font-weight: bold;
 }
 .logo {
 	display: block;
