--- a/hottip/index.html
+++ b/hottip/index.html
@@ -17,7 +17,7 @@ img {
 	box-shadow: 0px 2px 5px 0px #696969;
 }
 .title {
-	font-size: 14pt;
+	font-size: 20pt;
 	font-family: garamond;
 	color: #73e3ff;
 	text-align: center;
@@ -51,24 +51,34 @@ img {
 <img src="images/hot tip 1.jpg" title="February 15, 2019">
 
 	<br>
+	<br>
 	
 <p class="title">#2</p>
 <img src="images/hot tip 2.jpg" title="February 16, 2019">
 
 	<br>
-
+	<br>
+	
 <p class="title">#3</p>
 <img src="images/hot tip 3.jpg" title="February 25, 2019">
 
 	<br>
-
+	<br>
+	
 <p class="title">#4</p>
 <img src="images/hot tip 4.jpg" title="March 5, 2019">
 
 	<br>
-
+	<br>
+	
 <p class="title">#5</p>
 <img src="images/hot tip 5.jpg" title="March 12, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#5</p>
+<img src="images/hot tip 5.jpg" title="March 12, 2019">		
 	
 </body>
 </html
