--- a/hottip/index.html
+++ b/hottip/index.html
@@ -8,13 +8,13 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #181540;
+	background-color: #0d0d1c;
 }
 img {
 	width: 93%;
 	height: auto;
 	margin-bottom: 32px;
-	box-shadow: 0px 2px 5px 0px #696969;
+	box-shadow: 0px 2px 5px 0px #000000;
 }
 .title {
 	font-size: 20pt;
