--- a/hottip/index.html
+++ b/hottip/index.html
@@ -13,7 +13,7 @@ body {
 img {
 	width: 93%;
 	height: auto;
-	margin-top: 10px;
+	margin-top: 0px;
 	margin-bottom: 32px;
 	box-shadow: 0px 2px 5px 0px #000000;
 }
@@ -23,6 +23,7 @@ img {
 	color: #73e3ff;
 	text-align: center;
 	font-weight: bold;
+	margin-bottom: 5px;
 }
 .logo {
 	display: block;
