--- a/hottip/index.html
+++ b/hottip/index.html
@@ -83,8 +83,90 @@ img {
 	<br>
 	<br>
 	
-<p class="title">#5</p>
-<img src="images/hot tip 5.jpg" title="March 12, 2019">		
+<p class="title">#6</p>
+<img src="images/hot tip 6.jpg" title="April 6, 2019">	
 	
+	<br>
+	<br>
+	
+<p class="title">#7</p>
+<img src="images/hot tip 7.jpg" title="April 11, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#8</p>
+<img src="images/hot tip 8.jpg" title="April 26, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#9</p>
+<img src="images/hot tip 9.jpg" title="May 5, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#10</p>
+<img src="images/hot tip 10.jpg" title="May 8, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#11</p>
+<img src="images/hot tip 11.jpg" title="June 4, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#12</p>
+<img src="images/hot tip 12.jpg" title="June 6, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#13</p>
+<img src="images/hot tip 13.jpg" title="June 26, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#14</p>
+<img src="images/hot tip 14.jpg" title="July 25, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#15</p>
+<img src="images/hot tip 15.jpg" title="August 16, 2019">
+	
+	<br>
+	<br>
+	
+<p class="title">#16</p>
+<img src="images/hot tip 16.jpg" title="September 18, 2019">
+	
+	<br>
+	<br>
+	
+<p class="title">#17</p>
+<img src="images/hot tip 17.jpg" title="October 4, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#18 <i>(American Experiment: The Amendments to the Constitution)</i></p>
+<img src="images/get a handle (hot tip 18) (amendment 21).jpg" title="November 21, 2019">	
+	
+	<br>
+	<br>
+	
+<p class="title">#19</p>
+<img src="images/hot tip 19.jpg" title="March 8, 2020">	
+	
+	<br>
+	<br>
+	
+<h1 style="font-family:garamond;color: #362000;text-align:right;"><i>by Tom</i></h1>
 </body>
 </html
