--- a/index.html
+++ b/index.html
@@ -2,12 +2,41 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="images/t favicon.png">
+
+	<style>
+body {
+	text-align: center;
+	width: 600px;
+	margin: auto;
+	background-color: #f4f7fc;
+}
+img {
+	width: 93%;
+	height: auto;
+	margin-bottom: 32px;
+	box-shadow: 0px 2px 5px 0px #696969;
+}
+	.logo {
+	display: block;
+ 	margin-left: auto;
+  	margin-right: auto;
+     	width: 37%;
+	height: auto;
+	margin-bottom: 35px;
+	box-shadow: none;
+}
+</style>	
 </head>
+
+<body>
+		
 <TITLE>
     Tom's Page
 </TITLE>
-<body>
-	</br>
+	
+	<br>
+	<br>
+	<br>
 	
 <img src="images/tomspage.png" class="logo">
 <p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
@@ -21,30 +50,6 @@
 </br>
 </br>
 </br>
-<style>
-body {
-	text-align: center;
-	width: 600px;
-	margin: auto;
-	background-color: #f4f7fc;
-}
-img {
-	width: 93%;
-	height: auto;
-	margin-bottom: 32px;
-	box-shadow: 0px 2px 5px 0px #696969;
-
-}
-	.logo {
-	display: block;
- 	margin-left: auto;
-  	margin-right: auto;
-     	width: 37%;
-	height: auto;
-	margin-bottom: 35px;
-	box-shadow: none;
-}
-</style>
 
 <img src="images/rain song iv.jpg" title="December 28, 2020">
 <img src="images/camelot.jpg" title="November 25, 2020">
@@ -506,4 +511,7 @@ img {
 <h1 style="font-family:garamond;text-align:right;"><i>by Tom</i></h1>
 </br>
 <p style="font-family:Trebuchet MS;color:gray"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
+
+</body>
+</html>
 
