--- a/hottip/index.html
+++ b/hottip/index.html
@@ -167,6 +167,11 @@ img {
 	<br>
 	<br>
 	
-<h1 style="font-family:garamond;color: #362000;text-align:right;"><i>by Tom</i></h1>
+<h1 style="font-family:garamond;color: #ff8800;text-align:right;"><i>by Tom</i></h1>
+
+	<br>
+	<br>
+	
+<p style="font-family:Trebuchet MS;color:gray"><i>fortomadams@gmail.com • www.instagram.com/_tomspage</i></p>
 </body>
 </html
