--- a/hottip/index.html
+++ b/hottip/index.html
@@ -34,6 +34,26 @@ img {
 	margin-bottom: 35px;
 	box-shadow: none;
 }
+a:link {
+  color: gray;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:visited {
+  color: gray;
+  background-color: transparent;
+  text-decoration: none;
+}
+a:hover {
+  color: #404040;
+  background-color: transparent;
+  text-decoration: underline;
+}
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
+}
 </style>	
 </head>
 
