--- a/hottip/index.html
+++ b/hottip/index.html
@@ -8,7 +8,7 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #0d0d1c;
+	background-color: #1a1921;
 }
 img {
 	width: 93%;
