--- a/hottip/index.html
+++ b/hottip/index.html
@@ -37,12 +37,13 @@ img {
 a:link {
   color: gray;
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
 }
 a:visited {
   color: gray;
   background-color: transparent;
-  text-decoration: none;
+  text-decoration: underline;
+
 }
 a:hover {
   color: #404040;
