--- a/hottip/index.html
+++ b/hottip/index.html
@@ -15,7 +15,7 @@ img {
 	height: auto;
 	margin-top: 0px;
 	margin-bottom: 32px;
-	box-shadow: 0px 2px 5px 0px #000000;
+	box-shadow: 0px 2px 5px 0px #11101c;
 }
 .title {
 	font-size: 20pt;
