--- a/hottip/index.html
+++ b/hottip/index.html
@@ -8,14 +8,14 @@ body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #1a1921;
+	background-color: #0a0729;
 }
 img {
 	width: 93%;
 	height: auto;
 	margin-top: 0px;
 	margin-bottom: 32px;
-	box-shadow: 0px 2px 5px 0px #11101c;
+	box-shadow: 0px 2px 5px 0px #000000;
 }
 .title {
 	font-size: 20pt;
