--- a/hottip/index.html
+++ b/hottip/index.html
@@ -176,7 +176,7 @@ a:active {
 	<br>
 	<br>
 	
-<p class="title">#18 <i>(American Experiment: The Amendments to the Constitution)</i></p>
+<p class="title">#18</p>
 <img src="images/get a handle (hot tip 18) (amendment 21).jpg" title="November 21, 2019">	
 	
 	<br>
