--- a/hottip/index.html
+++ b/hottip/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" type="image/png" href="images/t favicon.png">
+<link rel="icon" type="image/png" href="https://www.tomspage.org/images/t%20favicon.png">
 
 <style>
 body {
