--- a/americanexperiment/index.html
+++ b/americanexperiment/index.html
@@ -265,7 +265,7 @@ img {
 	</br>
 
 <p class="amendment">––––    Amendment XXI (Section 1)    ––––</p>
-<p class="title">"get a handle.jpg" (<a href="https://www.tomspage.org/hottip">Hot Tip #18</a>)</p>
+<p class="title">"get a handle.jpg" (<a href="https://www.tomspage.org/hottip">Hot Tip #18 target="_blank"</a>)</p>
 <p class="body"><i>The eighteenth article of amendment to the Constitution of the United States is hereby repealed.</i></p>
 
 <img src="images/get a handle (hot tip 18) (amendment 21).jpg" title="November 21, 2019">
