--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@ img {
 </br>
 </br>
 
+<img src="images/midst of deliverance v.jpg" title="February 6, 2021">
+<img src="images/portrait of the artist 1.28.21.jpg" title="January 28, 2021">
 <img src="images/rain song iv.jpg" title="December 28, 2020">
 <img src="images/camelot.jpg" title="November 25, 2020">
 <img src="images/on being alone 3ish, or, portrait of the artist 10.18.20.jpg" title="October 18, 2020">
