--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ img {
 </br>
 </br>
 
+<img src="images/midst of deliverance vi.jpg" title="March 28, 2021">
 <img src="images/midst of deliverance v.jpg" title="February 6, 2021">
 <img src="images/portrait of the artist 1.28.21.jpg" title="January 28, 2021">
 <img src="images/rain song iv.jpg" title="December 28, 2020">
