--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ img {
 </br>
 </br>
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
-<img src="images/deliverance ix.jpg" title="June 26, 2021">
+<img src="images/midst of deliverance ix.jpg" title="June 26, 2021">
 <img src="images/what if 6.5.21, or, midst of deliverance viii.jpg" title="June 5, 2021">
 <img src="images/midst of deliverance vii.jpg" title="May 16, 2021">
 <img src="images/midst of deliverance vi.jpg" title="March 28, 2021">
