--- a/songs/index.html
+++ b/songs/index.html
@@ -2,12 +2,49 @@
 <html>
 <head>
 <link rel="icon" type="image/png" href="images/t favicon.png">
-  </head>
-<style>		
-  <body>	
-<TITLE>
-   Songs
-</TITLE>
-  </body>
+  
+  <style>
+    body {
+	text-align: center;
+	width: 600px;
+	margin: auto;
+	background-color: #f4f7fc;
+}
+img {
+	width: 93%;
+	height: auto;
+	margin-bottom: 32px;
+	box-shadow: 0px 2px 5px 0px #696969;
+}
+	.logo {
+	display: block;
+ 	margin-left: auto;
+  	margin-right: auto;
+     	width: 37%;
+	height: auto;
+	margin-bottom: 35px;
+	box-shadow: none;
+}
   </style>
+</head>		
+  
+<body>
+    
+<TITLE>
+   Songs!
+</TITLE>
+  
+  <br>
+	<br>
+	<br>
+	
+<img src="images/tomspage.png" class="logo">
+  
+<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
+  <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
+  <input type="email" name="_replyto">
+  <input type="submit" value="Send">
+  </form>
+  
+</body>
 </html>
