--- a/songs/index.html
+++ b/songs/index.html
@@ -76,9 +76,9 @@ img {
 	<br>
 	<br>
 	
-<img src="tomspage.org/images/tomspage.png" class="logo">
+<img src="images/songs page.png" class="logo">
 
-<img src="tomspage.org/images/soon man show.jpg">
+<img src="images/soon man show.jpg">
   
 <p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
   <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
