--- a/songs/index.html
+++ b/songs/index.html
@@ -57,7 +57,6 @@ img {
 	margin-bottom: 35px;
 	box-shadow: 0px 2px 5px 0px #696969;
 }	
-</style>	
 	.logo {
 	display: block;
  	margin-left: auto;
@@ -76,15 +75,10 @@ img {
 	<br>
 	<br>
 	
-<img src="images/songs page.png" class="logo">
+<img src="images/songs page 2.png" class="logo">
 
 <img src="images/soon man show.jpg">
-  
-<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
-  <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
-  </form>
+
   
 </body>
 </html>
