--- a/songs/index.html
+++ b/songs/index.html
@@ -77,8 +77,7 @@ img {
 	
 <img src="images/songs page 3.png" class="logo">
 
-<img src="images/soon man show.jpg">
-
+<p><a href="https://www.tomspage.org">Back to Tom's Page</a>class="title"</p>
   
 </body>
 </html>
