--- a/songs/index.html
+++ b/songs/index.html
@@ -12,7 +12,7 @@
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #ece0ff;
+	background-color: #efedf2;
   	line-height: 1.1;
 }
 .title {
