--- a/songs/index.html
+++ b/songs/index.html
@@ -12,7 +12,7 @@
 	text-align: center;
 	width: 600px;
 	margin: auto;
-	background-color: #efedf2;
+	background-color: #f2f2f7;
   	line-height: 1.1;
 }
 .title {
@@ -77,7 +77,7 @@ img {
 	
 <img src="images/songs page 3.png" class="logo">
 
-<p><a href="https://www.tomspage.org">Back to Tom's Page</a>class="title"</p>
+<p class ="title"><a href="https://www.tomspage.org">Back to Tom's Page</a></p>
   
 </body>
 </html>
