--- a/songs/index.html
+++ b/songs/index.html
@@ -4,7 +4,7 @@
 <link rel="icon" type="image/png" href="images/t favicon.png">
   
 <TITLE>
-   Songs!
+   Songs
 </TITLE>
 	
   <style>
@@ -75,9 +75,14 @@ img {
 	<br>
 	<br>
 	
-<img src="images/songs page 3.png" class="logo">
+<img src="images/songs page 4.png" class="logo">
+	
+<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
+<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
+  <input type="email" name="_replyto">
+  <input type="submit" value="Send">
 
-<p class ="title"><a href="https://www.tomspage.org">Back to Tom's Page</a></p>
+<p class="body"><a href="https://www.tomspage.org">Back to Tom's Page</a></p>
   
 </body>
 </html>
